...
    @State var errors: [String] = []
    
    var body: some View {
        ProgressViewOverlay(isLoading: $loading) {
            VStack(spacing: 0) {
                ZStack(alignment: .bottom) {
                    Image("background_overlay")
                        .resizable()
                        .scaledToFill()
                        .frame(height: 200)
                        .clipped()
                    
                    VStack {
...
